# WallGen

./: .gitignore  CHANGELOG.adoc  PKGBUILD  README.adoc  README.md  mise.toml  pyproject.toml  requirements.txt  setup.py  wallgen.yaml
python/: wallgen.py
python/wallgen/: Config.py  WallGenDBUSService.py  __init__.py  __util__.py  from_local.py  from_reddit.py
systemd/: wallgen-dbus.service  wallgen-monitor.service  wallgen.service  wallgen.timer
wallgen/: Config.py  WallGenDBUSService.py  __init__.py  __main__.py  __util__.py  from_local.py  from_reddit.py
