[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wallgen"
version = "26.3.1"
description="A wallpaper generator for gnome (and kde)"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Marcel Hoppe"}
]
dependencies = [
    "Wand",
    "pydbus",
    "PyGObject",
    "PyYAML"
]

[tool.setuptools]
packages = ["wallgen"]
script-files = ["bin/wallgen"]