[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wallgen"
version = "26.3.1"
description="A wallpaper generator for gnome (and kde)"
readme = "README.md"
requires-python = ">=3.6"
license = "GPL-3.0-or-later"
authors = [
    {name = "Marcel Hoppe"}
]
dependencies = [
    "Wand",
    "pydbus",
    "PyGObject",
    "PyYAML"
]

[project.scripts]
wallgen = "wallgen.__main__:start"

[tool.setuptools]
packages = ["wallgen"]
